# GUILib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  sonar-project.properties
LibGfx/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Color.cpp  Color.h  Font.cpp  Font.h  Painter.cpp  Painter.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Size.cpp  Size.h
LibGui/: Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  Label.cpp  Label.h  Widget.cpp  Widget.h
LibUtils/: CMakeLists.txt  Log.cpp  Log.h
